--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,15 @@ dependencies = [
     "scikit-learn (>=1.6.1,<2.0.0)",
     "deepgram-sdk (>=3.10.1,<4.0.0)",
     "openai (>=1.69.0,<2.0.0)",
-    "speechrecognition (>=3.14.2,<4.0.0)"
+    "speechrecognition (>=3.14.2,<4.0.0)",
+    "speechmatics-python (>=3.0.3,<4.0.0)"
 ]
 
 [tool.poetry]
 package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^9.0.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
